--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>testinfg</title>
 </head>
 <body>
-    <h2>Heading 2</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure nisi architecto maiores obcaecati quas enim porro veritatis, mollitia molestias similique! Rem perspiciatis modi nesciunt explicabo neque, vitae earum odit expedita!</p>
+    <h1>Heading1</h1>
+    <p>this is a pargraph</p>
 </body>
 <script src="script.js"></script>
 </html>
